// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Starred render closed 1`] = `
<React.Fragment>
  <Desktop
    display="block"
  >
    <TextLink
      onClick={[MockFunction]}
      type="secondary"
    >
      <Text
        html={false}
        t="starred.starred"
        values={Object {}}
      />
    </TextLink>
  </Desktop>
  <Mobile
    display="block"
  >
    <ButtonLink
      component="button"
      external={false}
      icon={
        <StarFull
          color="primary"
        />
      }
      onClick={[MockFunction]}
      size="normal"
      transparent={false}
      type="primary"
      width={0}
    />
  </Mobile>
</React.Fragment>
`;

exports[`#Starred render open 1`] = `
<React.Fragment>
  <ClickOutside
    onClickOutside={[MockFunction]}
  >
    <LogMount
      event={
        Object {
          "data": null,
          "event": "openStarred",
        }
      }
    />
    <TripContainer
      header={
        <Text
          html={false}
          t="starred.starred_flights"
          values={Object {}}
        />
      }
      padding={true}
      positionMenuDesktop={0}
      positionMenuTablet={0}
    >
      starred
    </TripContainer>
  </ClickOutside>
  <Desktop
    display="block"
  >
    <TextLink
      onClick={[MockFunction]}
      type="secondary"
    >
      <Text
        html={false}
        t="starred.starred"
        values={Object {}}
      />
    </TextLink>
  </Desktop>
  <Mobile
    display="block"
  >
    <ButtonLink
      component="button"
      external={false}
      icon={
        <StarFull
          color="primary"
        />
      }
      onClick={[MockFunction]}
      size="normal"
      transparent={false}
      type="primary"
      width={0}
    />
  </Mobile>
</React.Fragment>
`;
